fix(list): correct alignment of icon lists to match that of same size badge-icon list

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -75,3 +75,15 @@
         }
     }
 }
+
+.mdc-list:not(.mdc-list--avatar-list) {
+    limel-icon.mdc-list-item__graphic {
+        // Tweaks to make icon lists align nicely with badge-icon lists.
+        &[size="x-small"] {
+            margin-right: pxToRem(24);
+        }
+        &[size="small"] {
+            margin-right: pxToRem(26);
+        }
+    }
+}
